--- a/Desktop/veterinariaconstanza/web/WEB-INF/web.xml
+++ b/Desktop/veterinariaconstanza/web/WEB-INF/web.xml
@@ -8,7 +8,22 @@
      <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list> 
-    
+    <servlet>
+        <servlet-name>ClienteControl</servlet-name>
+        <servlet-class>org.cfg.uapa.java.veterinaria.controles.ClienteControl</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DoctorControles</servlet-name>
+        <servlet-class>org.cfg.uapa.java.veterinaria.controles.DoctorControles</servlet-class>
+    </servlet>
+        <servlet-mapping>
+        <servlet-name>ClienteControl</servlet-name>
+        <url-pattern>/ClienteControl</url-pattern>
+    </servlet-mapping>
+            <servlet-mapping>
+        <servlet-name>DoctorControles</servlet-name>
+        <url-pattern>/DoctorControles</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
