--- a/Desktop/veterinariaconstanza/web/WEB-INF/web.xml
+++ b/Desktop/veterinariaconstanza/web/WEB-INF/web.xml
@@ -6,8 +6,12 @@
 	 version="3.1">
     
      <welcome-file-list>
-        <welcome-file>login.jsp</welcome-file>
+        <welcome-file>inicio.jsp</welcome-file>
     </welcome-file-list> 
+    <servlet>
+        <servlet-name>EspecieControl </servlet-name>
+        <servlet-class>org.cfg.uapa.java.veterinaria.controles.EspecieControl</servlet-class>
+    </servlet>
     
     <session-config>
         <session-timeout>
