--- a/Desktop/veterinariaconstanza/web/WEB-INF/web.xml
+++ b/Desktop/veterinariaconstanza/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	 version="3.1">
     
      <welcome-file-list>
-        <welcome-file>inicio.jsp</welcome-file>
+        <welcome-file>login.jsp</welcome-file>
     </welcome-file-list> 
     <servlet>
         <servlet-name>EspecieControl </servlet-name>
