--- a/Desktop/veterinariaconstanza/nbproject/project.properties
+++ b/Desktop/veterinariaconstanza/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=-//W3C//DTD HTML 4.01//EN
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,6 +30,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1-bin.zip=..\\..\\..\\Nueva carpeta (2)\\commons-fileupload-1.3.1-bin.zip
+file.reference.commons-io-2.4-bin.zip=..\\..\\..\\Nueva carpeta (2)\\commons-io-2.4-bin.zip
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,7 +42,9 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.commons-fileupload-1.3.1-bin.zip}:\
+    ${file.reference.commons-io-2.4-bin.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
